--- a/RobotBuilder/RobsRobot.yaml
+++ b/RobotBuilder/RobsRobot.yaml
@@ -866,4 +866,4 @@ Properties:
   Autonomous Command: !!robotbuilder.data.properties.TypeSelectionProperty {default: None,
     name: Autonomous Command, type: Command, validators: null, value: Auto1}
 Base: Robot
-Name: Irecharge
+Name: irecharge
